Partial fix for IE blurrines

--- a/header-panel.less
+++ b/header-panel.less
@@ -34,8 +34,8 @@
             width: 40px;
             height: 30px;
             outline: none;
-            border: 1px solid @riksarkivet-header-color;
-            border-radius: 4px;
+            // border: 1px solid @riksarkivet-header-color;
+            // border-radius: 4px;
             
             &:hover {
                 border: 1px solid @buttonBorderColor;
@@ -138,8 +138,8 @@
                     margin-right: 0;
                     color: @headerLinkColor !important;
                     outline: none;
-                    border: 1px solid @riksarkivet-header-color;
-                    border-radius: 4px;
+                    // border: 1px solid @riksarkivet-header-color;
+                    // border-radius: 4px;
                     
                     &:link, &:visited, &:hover, &:active {
                         color: @headerLinkColor !important;
